--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
-  <meta name="google-signin-client_id" content="618444958388-tck81ucm6b346snnjgstfq86g5tgcfnb.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="618444958388-rh4d64mulbelse85qghjhbe6eft6p10b.apps.googleusercontent.com">
+  <!--old meta --- <meta name="google-signin-client_id" content="618444958388-tck81ucm6b346snnjgstfq86g5tgcfnb.apps.googleusercontent.com">-->
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
